<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.nbfalcon.MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp" android:id="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:srcCompat="@android:drawable/star_on"
            android:contentDescription="@string/chosen_image"/>
    <androidx.appcompat.widget.SwitchCompat
            android:text="@string/enable_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/enableImage"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/enableImage"
            app:layout_constraintStart_toStartOf="@+id/enableImage" android:layout_marginTop="16dp"
            android:text="@string/view_checkbox"/>
    <TextView
            android:text="@string/checked_no"
            android:layout_width="100dp"
            android:layout_height="0dp" android:id="@+id/checkBoxTextView"
            app:layout_constraintTop_toTopOf="@+id/checkBox"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox" app:layout_constraintStart_toEndOf="@+id/checkBox"
            android:layout_marginStart="16dp" android:textSize="14sp"/>
    <Button
            android:text="@string/random_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/randomImage"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" app:layout_constraintStart_toStartOf="@+id/checkBox"
            android:layout_marginTop="16dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/randomImage"
            app:layout_constraintStart_toStartOf="@+id/randomImage"
            app:layout_constraintEnd_toEndOf="@+id/randomImage" android:id="@+id/imageGroup">
        <RadioButton
                android:text="@string/image_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/image1" android:checked="true"/>
        <RadioButton
                android:text="@string/image_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/image2"/>
        <RadioButton
                android:text="@string/image_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/image3"/>
    </RadioGroup>
    <TextView
            android:text="@string/image_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/imageTextView"
            app:layout_constraintTop_toTopOf="@+id/imageGroup"
            app:layout_constraintBottom_toBottomOf="@+id/imageGroup"
            app:layout_constraintStart_toEndOf="@+id/imageGroup" android:layout_marginStart="16dp"/>
    <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageGroup"
            app:layout_constraintStart_toStartOf="@+id/imageGroup" android:layout_marginTop="16dp"
            android:id="@+id/chipGroup">
        <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/chip1"
                android:text="@string/cat_meow" style="@style/Widget.MaterialComponents.Chip.Choice"/>
        <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/chip2" android:text="@string/cat_reow"
                style="@style/Widget.MaterialComponents.Chip.Filter"/>
    </com.google.android.material.chip.ChipGroup>
    <TextView
            android:text="@string/cat_meow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/chipTextView"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" app:layout_constraintStart_toStartOf="@+id/chipGroup"
            android:layout_marginTop="16dp"/>
    <ToggleButton
            android:text="@string/view_togglebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/enableImageToggle"
            app:layout_constraintStart_toEndOf="@+id/enableImage" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/enableImage"
            app:layout_constraintBottom_toBottomOf="@+id/enableImage"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="0dp" app:srcCompat="@android:drawable/star_on"
            android:id="@+id/randomImage2"
            app:layout_constraintStart_toEndOf="@+id/randomImage"
            app:layout_constraintBottom_toBottomOf="@+id/randomImage"
            app:layout_constraintTop_toTopOf="@+id/randomImage" android:layout_marginStart="16dp"
            android:contentDescription="@string/chosen_image"/>
</androidx.constraintlayout.widget.ConstraintLayout>